--- a/original/css/lib/buttons.styl
+++ b/original/css/lib/buttons.styl
@@ -2,10 +2,10 @@
 // BUTTONS
 .button
 	color white
-	background-color partner-color
+	background-color #f99945
 	display table
 	width 100%
-	padding 20px
+	// border-radius 4px
+	padding 7px
 	text-align center
 	font-weight 500
-	font-size 22px
