--- a/original/css/style.styl
+++ b/original/css/style.styl
@@ -7,5 +7,5 @@
 @import 'lib/texts.styl'
 @import 'lib/buttons.styl'
 @import 'lib/forms.styl'
-// @import 'lib/utils.styl'
+@import 'lib/utils.styl'
 
