--- a/css/lib/forms.styl
+++ b/css/lib/forms.styl
@@ -1,19 +1,46 @@
 
+
 // FORMS
+
+.input-wrapper
+	display: flex;
+	align-items: center;
+
+.icon
+	margin-top: 4px;
+	
+.input-container
+	border-bottom: solid 1px gray-light-dark;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	// padding: 10px 0;
+	padding: 15px 0;
+	&-text
+		// width 70px
+		width 75px
+	&-input
+		flex 1
+
+// border-color = gray-dark
+
 .input
 .select
 	background-color white
-	border-left: 1px solid #cececf;
-	border-right: 1px solid #cececf;
-	border-bottom: 1px solid #cececf;
-	padding-top 8px
-	padding-right 8px
-	padding-bottom 8px
-	padding-left 27px
+	// font-weight 300
+	font-size 15px
 	width 100%
-	font-size: 14px;
-	&.first
-		border-top: 1px solid #cececf;
+	
+// 	border-left: 1px solid rgba(border-color, .25);
+// 	border-right: 1px solid rgba(border-color, .25);
+// 	border-bottom: 1px solid rgba(border-color, .25);
+// 	padding-top 8px
+// 	padding-right 8px
+// 	padding-bottom 8px
+// 	padding-left 27px
+// 	font-size: 14px;
+// 	&.first
+// 		border-top: 1px solid rgba(border-color, .25);
 		// border-top-left-radius: 4px;
 		// border-top-right-radius: 4px;
 	// &.latest
