--- a/css/lib/layout.styl
+++ b/css/lib/layout.styl
@@ -14,38 +14,50 @@
 
 // HEADER
 .header
-	padding-top 20px
-	padding-left 30px
-	padding-right 30px
-	padding-bottom 5px
+	height 136px
+	background gray-light
+	padding-top 18px
+	
 .logo
-	width 68px
 	display table
-	margin-left auto
-	margin-right auto
+	margin auto
+	padding-bottom 5px
+	// padding-bottom 10px
 	img
-		width 100%
+		width 56px
+		// width 50px
+	// background partner-color
+// 	padding-top global-padding-top
+// 	padding-left global-padding-left
+// 	padding-right global-padding-right
+// 	padding-bottom 5px
+// .logo
+// 	width 68px
+// 	display table
+// 	margin-left auto
+// 	margin-right auto
+// 	img
+// 		width 100%
 		// border-radius 4px
 
 // BODY
-.form-section
-	// padding-top 20px
-	padding-left 20px
-	padding-right 20px
-	padding-bottom 20px
-	width 100%
+// .form-section
+// 	// padding-top 20px
+// 	padding-left global-padding-left
+// 	padding-right global-padding-right
+// 	// padding-bottom 20px
+// 	width 100%
 
-.sumary
-	border-top: 1px solid #d3d3d4;
-	border-bottom: 1px solid #d3d3d4;
-	padding-left 20px
-	padding-right 20px
-	padding-top 5px
-	padding-bottom 5px
-	text-align center
+// .sumary
+// 	border-top: 1px solid #d3d3d4;
+// 	border-bottom: 1px solid #d3d3d4;
+// 	padding-left global-padding-left
+// 	padding-right global-padding-right
+// 	padding-top 5px
+// 	padding-bottom 5px
 
 // FOOTER
-.footer
-	padding-left 20px
-	padding-right 20px
-	padding-bottom 20px
+// .footer
+// 	padding-left global-padding-left
+// 	padding-right global-padding-right
+// 	padding-bottom global-padding-bottom
