--- a/css/lib/texts.styl
+++ b/css/lib/texts.styl
@@ -1,12 +1,17 @@
 
 // TEXTS
+
+.text
+	font-weight 600
+	font-size: 14.5px;
+
 .title
 	font-size 17px
 	font-weight 600
 	text-align center
+	padding-bottom: 2px;
 	
 .subtitle
-	font-size 14px
-	// font-weight 500
-	text-align center
-	color #5b5b65
+	font-size: 14px;
+	text-align: center;
+	font-weight: 400;
