cambios a asass de Purple pay

--- a/css/lib/config.scss
+++ b/css/lib/config.scss
@@ -1,7 +1,9 @@
 
 // CONFIG
-html
-body
-	height 100%
-body
+html{}
+body{
+	height: 100%;
+}
+body{
 	font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif;
+}
