--- a/css/lib/forms.scss
+++ b/css/lib/forms.scss
@@ -2,35 +2,50 @@
 
 // FORMS
 
-.input-wrapper
+.input-wrapper{
 	display: flex;
 	align-items: center;
 
-.icon
+}
+.icon{
 	margin-top: 4px;
-	
-.input-container
+	position: absolute;
+}
+.input{
+	height: 45px;
+	width: 100%;
+	padding-left: 30px;
+	font-size: 15px;
+	background: #fff;
+	box-shadow: inset 0 1px 1px rgba(124,124,127,0.1), 0 1px 0 rgba(255,255,255,0.7), 0 0 4px rgba(86,149,219,0);
+	border-top: 1px solid #cececf;
+}
+.input-container{
 	border-bottom: solid 1px gray-light-dark;
 	width: 100%;
 	display: flex;
 	align-items: center;
-	// padding: 10px 0;
-	padding: 15px 0;
-	&-text
-		// width 70px
-		width 75px
-	&-input
-		flex 1
 
+	&-input{
+		flex: 1;
+		height: 44px;
+	}
+}
 // border-color = gray-dark
 
-.input
-.select
-	background-color white
-	// font-weight 300
-	font-size 15px
-	width 100%
-	
+.input {}
+.select{
+	background-color: white;
+	font-size: 15px;
+	height: 45px;
+	width: 100%;
+	padding-left: 30px;
+	background: #fff;
+	box-shadow: inset 0 1px 1px rgba(124,124,127,0.1), 0 1px 0 rgba(255,255,255,0.7), 0 0 4px rgba(86,149,219,0);
+	border-top: 1px solid #cececf;
+}
+
+/*
 // 	border-left: 1px solid rgba(border-color, .25);
 // 	border-right: 1px solid rgba(border-color, .25);
 // 	border-bottom: 1px solid rgba(border-color, .25);
@@ -46,3 +61,4 @@
 	// &.latest
 	// 	border-bottom-left-radius: 4px;
 	// 	border-bottom-right-radius: 4px;
+*/
