--- a/css/lib/layout.scss
+++ b/css/lib/layout.scss
@@ -1,31 +1,38 @@
 
 // LAYOUT
-.layout
-	display table
-	height 100%
-	width 100%
-	&-header
-		display table-header-group
-	&-body
-		display table-row-group
-	&-bottom
-		display table-footer-group
-
+.layout{
+	display: table;
+	height: 100%;
+	width: 100%;
+	&-header{
+		display: table-header-group;
+	}
+	&-body{
+		display: table-row-group;
+	}
+	&-bottom{
+		display: table-footer-group;
+	}
+}
 
 // HEADER
-.header
-	height 136px
-	background gray-light
-	padding-top 18px
-	
-.logo
-	display table
-	margin auto
-	padding-bottom 5px
-	// padding-bottom 10px
-	img
-		width 56px
-		// width 50px
+.header{
+	height: 165px;
+	padding-top: 35px;
+	background-image: linear-gradient(#f5f5f7, #e9e9ea);
+	border-bottom: 1px solid #d3d3d4;
+}
+.logo{
+	display: table;
+	margin: auto;
+	padding-bottom: 5px;
+
+	img{
+		width: 68px;
+		border-radius: 5px;
+	}
+}
+/*
 	// background partner-color
 // 	padding-top global-padding-top
 // 	padding-left global-padding-left
@@ -61,3 +68,4 @@
 // 	padding-left global-padding-left
 // 	padding-right global-padding-right
 // 	padding-bottom global-padding-bottom
+*/
