--- a/css/style.css
+++ b/css/style.css
@@ -1,138 +1,214 @@
 * {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
+
 body {
-  margin: 0;
-}
+  margin: 0; }
+
 img {
-  vertical-align: top;
-}
+  vertical-align: top; }
+
 figure {
-  margin: 0;
-}
-input,
+  margin: 0; }
+
 select {
   outline: 0;
   border: 0;
-  -webkit-border-radius: 0;
   border-radius: 0;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
+  appearance: none; }
+
 p {
+  margin: 0; }
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
   margin: 0;
-}
-html,
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
 body {
-  height: 100%;
-}
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
 body {
-  font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif;
-}
+  height: 100%; }
+
+body {
+  font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif; }
+
 .layout {
   display: table;
   height: 100%;
-  width: 100%;
-}
-.layout-header {
-  display: table-header-group;
-}
-.layout-body {
-  display: table-row-group;
-}
-.layout-bottom {
-  display: table-footer-group;
-}
+  width: 100%; }
+  .layout-header {
+    display: table-header-group; }
+  .layout-body {
+    display: table-row-group; }
+  .layout-bottom {
+    display: table-footer-group; }
+
 .header {
-  height: 136px;
-  background: #f8f8f8;
-  padding-top: 18px;
-}
+  height: 165px;
+  padding-top: 35px;
+  background-image: linear-gradient(#f5f5f7, #e9e9ea);
+  border-bottom: 1px solid #d3d3d4; }
+
 .logo {
   display: table;
   margin: auto;
-  padding-bottom: 5px;
-}
-.logo img {
-  width: 56px;
-}
+  padding-bottom: 5px; }
+  .logo img {
+    width: 68px;
+    border-radius: 5px; }
+
+/*
+	// background partner-color
+// 	padding-top global-padding-top
+// 	padding-left global-padding-left
+// 	padding-right global-padding-right
+// 	padding-bottom 5px
+// .logo
+// 	width 68px
+// 	display table
+// 	margin-left auto
+// 	margin-right auto
+// 	img
+// 		width 100%
+		// border-radius 4px
+
+// BODY
+// .form-section
+// 	// padding-top 20px
+// 	padding-left global-padding-left
+// 	padding-right global-padding-right
+// 	// padding-bottom 20px
+// 	width 100%
+
+// .sumary
+// 	border-top: 1px solid #d3d3d4;
+// 	border-bottom: 1px solid #d3d3d4;
+// 	padding-left global-padding-left
+// 	padding-right global-padding-right
+// 	padding-top 5px
+// 	padding-bottom 5px
+
+// FOOTER
+// .footer
+// 	padding-left global-padding-left
+// 	padding-right global-padding-right
+// 	padding-bottom global-padding-bottom
+*/
 .text {
   font-weight: 600;
-  font-size: 14.5px;
-}
+  font-size: 14.5px; }
+
 .title {
-  font-size: 17px;
+  font-size: 20px;
   font-weight: 600;
   text-align: center;
-  padding-bottom: 2px;
-}
+  padding-bottom: 2px; }
+
 .subtitle {
   font-size: 14px;
   text-align: center;
   font-weight: 400;
-}
+  color: #5b5b65;
+  letter-spacing: 0.25px; }
+
 .button {
-  color: #fff;
-  background-color: #f99945;
+  color: white;
+  background-color: partner-color;
   display: table;
   width: 100%;
   padding: 20px;
   text-align: center;
   font-weight: 500;
-  font-size: 22px;
-}
+  font-size: 22px; }
+
 .input-wrapper {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
   display: flex;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -o-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-}
+  align-items: center; }
+
 .icon {
   margin-top: 4px;
-}
-.input-container {
-  border-bottom: solid 1px #f2f2f2;
+  position: absolute; }
+
+.input {
+  height: 45px;
   width: 100%;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
-  display: flex;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -o-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-  padding: 15px 0;
-}
-.input-container-text {
-  width: 75px;
-}
-.input-container-input {
-  -webkit-box-flex: 1;
-  -moz-box-flex: 1;
-  -o-box-flex: 1;
-  box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-}
-.input,
-.select {
-  background-color: #fff;
+  padding-left: 30px;
   font-size: 15px;
+  background: #fff;
+  box-shadow: inset 0 1px 1px rgba(124, 124, 127, 0.1), 0 1px 0 rgba(255, 255, 255, 0.7), 0 0 4px rgba(86, 149, 219, 0);
+  border-top: 1px solid #cececf; }
+
+.input-container {
+  border-bottom: solid 1px gray-light-dark;
   width: 100%;
-}
+  display: flex;
+  align-items: center; }
+  .input-container-input {
+    flex: 1;
+    height: 44px; }
+
+.select {
+  background-color: white;
+  font-size: 15px;
+  height: 45px;
+  width: 100%;
+  padding-left: 30px;
+  background: #fff;
+  box-shadow: inset 0 1px 1px rgba(124, 124, 127, 0.1), 0 1px 0 rgba(255, 255, 255, 0.7), 0 0 4px rgba(86, 149, 219, 0);
+  border-top: 1px solid #cececf; }
+
+/*
+// 	border-left: 1px solid rgba(border-color, .25);
+// 	border-right: 1px solid rgba(border-color, .25);
+// 	border-bottom: 1px solid rgba(border-color, .25);
+// 	padding-top 8px
+// 	padding-right 8px
+// 	padding-bottom 8px
+// 	padding-left 27px
+// 	font-size: 14px;
+// 	&.first
+// 		border-top: 1px solid rgba(border-color, .25);
+		// border-top-left-radius: 4px;
+		// border-top-right-radius: 4px;
+	// &.latest
+	// 	border-bottom-left-radius: 4px;
+	// 	border-bottom-right-radius: 4px;
+*/
+
+/*# sourceMappingURL=style.css.map */
