add local changes

--- a/css/lib/buttons.scss
+++ b/css/lib/buttons.scss
@@ -2,7 +2,7 @@
 // BUTTONS
 .button{
 	color: white;
-	background-color: partner-color;
+	background-color: $partner-color;
 	display: table;
 	width: 100%;
 	padding: 20px;
