--- a/css/lib/vars.scss
+++ b/css/lib/vars.scss
@@ -1,16 +1,40 @@
+/**
+ * **************************************
+ * COLORS
+ * **************************************
+ */
 
-// Colors
-$purple-color : #4D148C;
 
-$gray-light 		: #F8F8F8;
-$gray-light-dark : #F2F2F2;
-$gray-dark 		: #58595B;
+/**
+ * Primary
+ */
+$purple-color 	: #4D148C;
+$blue-color 	: #0088CC;
+$red-color 		: #FF0033;
+$green-color 	: #009900;
 
-// Partner Colors
-$partner-color : #f99945;
+/**
+ * Grey
+ */
+$light-grey		: #F8F8F8;
+$medium-grey	: #F2F2F2;
+$dark-grey		: #58595B;
 
+/**
+ * Tory Brush
+ */
+$partner-color : #f99945; 	// Orange
+
+
+
+
+/**
+ * **************************************
+ * LAYOUT
+ * **************************************
+ */
 // Padding
-$global-padding-top 	: 20px;
-$global-padding-left	: 30px;
-$global-padding-right	: 30px;
-$global-padding-bottom	: 30px;
+// $global-padding-top 	= 20px
+// $global-padding-left	= 30px
+// $global-padding-right	= 30px
+// $global-padding-bottom	= 30px
