--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,22 @@
+/**
+ * **************************************
+ * COLORS
+ * **************************************
+ */
+/**
+ * Primary
+ */
+/**
+ * Grey
+ */
+/**
+ * Tory Brush
+ */
+/**
+ * **************************************
+ * LAYOUT
+ * **************************************
+ */
 * {
   box-sizing: border-box; }
 
@@ -62,6 +81,7 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+html,
 body {
   height: 100%; }
 
@@ -149,7 +169,7 @@ body {
 
 .button {
   color: white;
-  background-color: partner-color;
+  background-color: #f99945;
   display: table;
   width: 100%;
   padding: 20px;
@@ -210,5 +230,3 @@ body {
 	// 	border-bottom-left-radius: 4px;
 	// 	border-bottom-right-radius: 4px;
 */
-
-/*# sourceMappingURL=style.css.map */
