Update Purple Pay

--- a/css/app/vars.styl
+++ b/css/app/vars.styl
@@ -8,22 +8,22 @@
 /**
  * Primary
  */
-$purple-color 	: #4D148C;
-$blue-color 	: #0088CC;
-$red-color 		: #FF0033;
-$green-color 	: #009900;
+$purple-color 	= #4D148C
+$blue-color 	= #0088CC
+$red-color 		= #FF0033
+$green-color 	= #009900
 
 /**
  * Grey
  */
-$light-grey		: #F8F8F8;
-$medium-grey	: #F2F2F2;
-$dark-grey		: #58595B;
+$light-grey		= #F8F8F8
+$medium-grey	= #F2F2F2
+$dark-grey		= #58595B
 
 /**
  * Tory Brush
  */
-$partner-color : #f99945; 	// Orange
+$partner-color = #f99945 	// Orange
 
 
 
