--- a/css/app/layout.styl
+++ b/css/app/layout.styl
@@ -9,11 +9,11 @@
 	height 100%
 	width 100%
 	background #f5f5f7
-	&-header
+	&__header
 		display table-header-group
 
-	&-body
+	&__body
 		display table-row-group
 
-	&-bottom
+	&__bottom
 		display table-footer-group
