--- a/css/app/texts.styl
+++ b/css/app/texts.styl
@@ -17,3 +17,10 @@
 	font-weight 400
 	color #5b5b65
 	letter-spacing 0.25px
+//TITLE
+.form-title
+	cursor: pointer;
+	font-size: 17px;
+	padding-left: 10px;
+	padding-bottom: 10px;
+	padding-top: 10px;
